--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
           <textarea id="output" placeholder="Translation will appear here"></textarea>
      </div>
      <footer>
-          <h2>about</h2>
-          <p> This is a fun translation app made using <a
-                    href="https://funtranslations.com/api/banana">funtranslations.com</a> API. </p>
+          <p>
+               Developed by <a href="https://github.com/sahsisunny">Sunny Sahsi</a>
+          </p>
      </footer>
      <script src="./script.js"></script>
 </body>
