--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
      <meta charset="UTF-8">
      <link rel="stylesheet" href="./style.css">
      <!-- favicon -->
-     <link rel="icon" href="./assets/banana.ico" type="image/x-icon">
-     <title>Banana Talk</title>
+     <link rel="icon" href="./assets/mammoth_happy.ico" type="image/x-icon">
+     <title>Funny Translation</title>
 </head>
 
 <body>
 
-     <h1>Banana Talk</h1>
+     <h1>Funny Translation</h1>
      <div class="container">
           <!-- select items -->
           <div class="select">
