--- a/index.html
+++ b/index.html
@@ -4,24 +4,15 @@
 <head>
      <meta charset="UTF-8">
      <link rel="stylesheet" href="./style.css">
-     <!-- favicon -->
-     <link rel="icon" href="./assets/mammoth_happy.ico" type="image/x-icon">
-     <title>Funny Translation</title>
+     <link rel="icon" href="./assets/icon.ico" type="image/x-icon">
+     <title>Minions Speaks</title>
 </head>
 
 <body>
 
-     <h1>Funny Translation</h1>
+     <h1>Minions Speaks</h1>
      <div class="container">
-          <!-- select items -->
-          <div class="select">
-               <p>Select the Character : </p>
-               <select id="select">
-                    <option selected value="minion">Minion</option>
-                    <option value="yoda">Yoda</option>
-                    <option value="pirate">Pirate</option>
-               </select>
-          </div>
+
           <textarea id="input" placeholder="Enter your text here"></textarea>
           <button id="btn">Translate</button>
 
