--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
      <meta charset="UTF-8">
      <link rel="stylesheet" href="./style.css">
-     <!-- favicon -->
      <link rel="icon" href="./assets/mammoth_happy.ico" type="image/x-icon">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Funny Translation</title>
 </head>
 
